[package]
name = "philiprehberger-semver-util"
version = "0.1.2"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Semantic versioning with range parsing, comparison, and bumping"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-semver-util"
keywords = ["semver", "version", "range", "parsing", "comparison"]
categories = ["parser-implementations", "config"]
